test/conv/array_decay_no_assign.vp
//! stage: check
//! expect-compile: error

pub fn main() : void
{
    var buf : uint8[64];
    var p : uint8* = buf; // error: decay only in function arg context
}